--- a/sites/blackroad/package.json
+++ b/sites/blackroad/package.json
@@ -16,26 +16,29 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "6.30.1",
     "recharts": "^2.11.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.47.0",
-    "@typescript-eslint/eslint-plugin": "^8.4.0",
-    "@typescript-eslint/parser": "^8.4.0",
     "@eslint/js": "^9.9.0",
+    "@playwright/test": "^1.47.0",
+    "@size-limit/file": "^11.1.5",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
+    "@vitejs/plugin-react": "4.7.0",
+    "autoprefixer": "10.4.21",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "gray-matter": "^4.0.3",
     "husky": "^9.1.5",
     "marked": "^12.0.2",
     "monaco-editor": "^0.49.0",
+    "postcss": "8.5.6",
     "prettier": "^3.3.3",
     "size-limit": "^11.1.5",
-    "@size-limit/file": "^11.1.5",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "3.4.17",
     "vite": "^5.4.2"
   }
 }
