--- a/apps/blackroad-web/package.json
+++ b/apps/blackroad-web/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.0.0",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.0",
+    "recharts": "^2.12.7",
+    "socket.io-client": "^4.7.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
