--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,23 @@ OPENAI_BASE_URL=http://localhost:8000/v1
 OPENAI_MODEL=lucidia-neox-1.4b
 RAG_INDEX_PATH=rag/index/lucidia.faiss
 TRAIN_BASE_MODEL=EleutherAI/pythia-1.4b
+
+# Billing (Stripe)
+APP_URL=https://blackroad.io
+API_URL=https://blackroad.io/api
+STRIPE_SECRET_KEY=
+STRIPE_PRICE_BUILDER_MONTH=
+STRIPE_PRICE_BUILDER_YEAR=
+STRIPE_PRICE_PRO_MONTH=
+STRIPE_PRICE_PRO_YEAR=
+STRIPE_PRICE_ENTERPRISE_MONTH=
+STRIPE_PRICE_ENTERPRISE_YEAR=
+BILLING_RETURN_URL=https://blackroad.io/subscribe
+BILLING_CANCEL_URL=https://blackroad.io/subscribe?canceled=1
+PRICE_BUILDER_MONTH_CENTS=
+PRICE_BUILDER_YEAR_CENTS=
+PRICE_PRO_MONTH_CENTS=
+PRICE_PRO_YEAR_CENTS=
+PRICE_ENTERPRISE_MONTH_CENTS=
+PRICE_ENTERPRISE_YEAR_CENTS=
+BILLING_DISABLE=false
