feat: add subscribe portal and stripe backend

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "socket.io": "^4.7.5",
     "systeminformation": "^5.25.11",
     "uuid": "^9.0.1",
-    "better-sqlite3": "^9.4.3"
+    "better-sqlite3": "^9.4.3",
+    "stripe": "^12.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
