--- a/srv/blackroad-api/.env.example
+++ b/srv/blackroad-api/.env.example
@@ -1,14 +1,20 @@
-# BlackRoad API defaults
-PORT=4000
 NODE_ENV=production
-CORS_ORIGIN=http://localhost:5173,https://blackroad.io
+PORT=4000
+INTERNAL_TOKEN=change-me
+GITHUB_WEBHOOK_SECRET=change-me
+ALLOW_SHELL=false
+BRANCH_MAIN=main
+BRANCH_STAGING=staging
 
-# Session / Auth
-SESSION_KEYS=dev1,dev2
-JWT_SECRET=devsecret
+SLACK_WEBHOOK_URL=
+AIRTABLE_API_KEY=
+AIRTABLE_BASE_ID=
+AIRTABLE_TABLE_DEPLOYS=Deploys
 
-# Data
-DB_PATH=/srv/blackroad-api/blackroad.db
+LINEAR_API_KEY=
+LINEAR_TEAM_ID=
 
-# LLM endpoint
-LLM_URL=http://127.0.0.1:8000
+SF_LOGIN_URL=https://login.salesforce.com
+SF_USERNAME=
+SF_PASSWORD=
+SF_TOKEN=
