--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
   "scripts": {
     "start": "node server_full.js",
     "dev": "nodemon server_full.js",
-    "seed": "node scripts/seed_admin.js"
+    "seed": "node scripts/seed_admin.js",
+    "prepare": "husky",
+    "lint": "eslint . --ext .js,.jsx,.mjs,.cjs || true",
+    "format": "prettier -w .",
+    "test": "node tests/smoke.test.js",
+    "dev:site": "npm --prefix sites/blackroad run dev",
+    "build": "npm --prefix sites/blackroad run build",
+    "fix-anything": "node .github/tools/codex-apply.js .github/prompts/codex-fix-anything.md || true"
   },
   "engines": {
     "node": ">=18.17"
-    "prepare": "husky",
-      "lint": "eslint . --ext .js,.jsx,.mjs,.cjs || true",
-    "format": "prettier -w .",
-    "test": "node tests/smoke.test.js",
-    "dev": "npm --prefix sites/blackroad run dev",
-    "build": "npm --prefix sites/blackroad run build",
-    "fix-anything": "node .github/tools/codex-apply.js .github/prompts/codex-fix-anything.md || true"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
