Dockerize Prism backend with SQLite and CI

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ DB_PATH=/srv/blackroad-api/blackroad.db
 SESSION_SECRET=change-this-session-secret
 JWT_SECRET=change-this-jwt-secret
 SOCKET_SECRET=change-this-socket-secret
+CONNECTOR_KEY=change-this-connector-key
 
 # CORS
 ALLOWED_ORIGIN=https://blackroad.io
