--- a/docker-compose.prism.yml
+++ b/docker-compose.prism.yml
@@ -1,27 +1,27 @@
 version: "3.9"
+
 services:
   api:
-    image: node:20-alpine
+    build: ./srv/blackroad-api
     container_name: blackroad-api
-    working_dir: /app
-    restart: unless-stopped
-    environment:
-      - PORT=4000
-      - NODE_ENV=production
-    volumes:
-      - ./services/api:/app:ro
-    command: ["node", "server.mjs"]
+    restart: always
+    env_file: .env
     ports:
       - "4000:4000"
-
-  site:
-    image: caddy:2.8-alpine
-    container_name: blackroad-site
-    restart: unless-stopped
-    ports:
-      - "8080:8080"
     volumes:
-      - ./sites/blackroad/dist:/srv:ro
-      - ./sites/blackroad/Caddyfile:/etc/caddy/Caddyfile:ro
+      - blackroad-db:/srv/blackroad-api/blackroad.db
+
+  nginx:
+    image: nginx:alpine
+    container_name: blackroad-nginx
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/prism-api.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - api
+
+volumes:
+  blackroad-db:
+
