--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vite build && cypress run"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -25,6 +26,8 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.9",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "cypress": "^13.6.0",
+    "@vitejs/plugin-react": "^4.1.0"
   }
 }
