--- a/sites/blackroad/package.json
+++ b/sites/blackroad/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx || true",
     "format": "prettier -w .",
     "test": "echo \"(add Playwright later)\"",
-    "e2e": "playwright test || true"
+    "e2e": "playwright test || true",
+    "test:cy": "start-server-and-test dev http://localhost:5173 \"cypress run\""
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -39,6 +40,8 @@
     "prettier": "^3.3.3",
     "size-limit": "^11.1.5",
     "tailwindcss": "3.4.17",
-    "vite": "^7.1.3"
+    "vite": "^7.1.3",
+    "cypress": "^13.14.0",
+    "start-server-and-test": "^2.0.0"
   }
 }
