--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.9",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "cypress": "^13.6.0"
   }
 }
