--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,7 +31,8 @@ repos:
     hooks:
       - id: black
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.3.3
+    # v3.3.3 tag no longer exists; use the latest available 3.x release.
+    rev: v3.1.0
     hooks:
       - id: prettier
         additional_dependencies: ["prettier@^3"]
@@ -47,4 +48,3 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
-        additional_dependencies: ['prettier@3.3.3']
