--- a/sites/blackroad/package.json
+++ b/sites/blackroad/package.json
@@ -14,8 +14,10 @@
     "e2e": "playwright test || true"
   },
   "dependencies": {
+    "idb-keyval": "6.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-rnd": "10.5.2",
     "react-router-dom": "6.30.1",
     "recharts": "^2.11.0"
   },
