--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,14 @@
     "test": "node -e \"console.log('no tests')\""
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "better-sqlite3": "^9.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.5",
-    "uuid": "^9.0.1",
-    "better-sqlite3": "^9.4.3"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
