--- a/nginx/blackroad.conf
+++ b/nginx/blackroad.conf
@@ -1,43 +1,49 @@
+# BlackRoad.io — SPA + API reverse proxy
 server {
   listen 80;
-  server_name blackroad.io;
+  listen 443 ssl http2;
+  server_name blackroad.io www.blackroad.io;
 
+  # --- TLS (Let's Encrypt) ---
+  ssl_certificate     /etc/letsencrypt/live/blackroad.io/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/blackroad.io/privkey.pem;
+  # (optional hardening)
+  ssl_session_timeout 1d;
+  ssl_session_cache shared:SSL:50m;
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_ciphers HIGH:!aNULL:!MD5;
+
+  # --- Static SPA (index.html) ---
   root /var/www/blackroad;
   index index.html;
 
-  location /api/ {
-    proxy_pass http://127.0.0.1:4000;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+  # Serve assets directly
+  location ~* \.\(js|css|png|jpg|jpeg|gif|svg|ico|woff2?|ttf|map\)$ {
+    try_files $uri =404;
+    access_log off;
+    expires 7d;
   }
 
-  location /ws/ {
-    proxy_pass http://127.0.0.1:4000;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-  }
-
-  location /math/ {
-    proxy_pass http://127.0.0.1:8500;
-  }
-
-  location /llm/ {
-    proxy_pass http://127.0.0.1:8000;
-  }
-
+  # SPA fallback: fixes 403 at "/" and 500 on /login etc.
   location / {
     try_files $uri /index.html;
   }
 
-  location ~* \.(js|css|png|jpg|svg)$ {
-    expires 1d;
-    add_header Cache-Control "public";
+  # --- API ---
+  location /api/ {
+    proxy_pass http://127.0.0.1:4000/;
+    proxy_http_version 1.1;
+
+    proxy_set_header Host              $host;
+    proxy_set_header X-Real-IP         $remote_addr;
+    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    # websockets (if your API streams)
+    proxy_set_header Upgrade           $http_upgrade;
+    proxy_set_header Connection        $connection_upgrade;
   }
 
-  gzip on;
-  gzip_types text/plain text/css application/json application/javascript;
-  # SSL certificates via Let's Encrypt should be managed separately.
+  # Health endpoints (optional, simple)
+  location = /health { return 200 "ok\n"; add_header Content-Type text/plain; }
 }
