--- a/.github/workflows/auto-heal.yml
+++ b/.github/workflows/auto-heal.yml
@@ -12,14 +12,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with: { persist-credentials: false, ref: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_branch || github.ref }} }
+        with:
+          persist-credentials: false
+          ref: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_branch || github.ref }}
       - run: |
           git config user.name  "${{ secrets.BOT_USER || 'blackroad-bot' }}"
           git config user.email "${{ secrets.BOT_USER || 'blackroad-bot' }}@users.noreply.github.com"
       - id: heal
         run: .github/tools/autoheal.sh
       - if: steps.heal.outputs.committed == '1'
-        env: { BOT_TOKEN: ${{ secrets.BOT_TOKEN }} }
+        env:
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
         run: |
           [ -z "$BOT_TOKEN" ] && { echo "::notice::No BOT_TOKEN"; exit 0; }
           git push "https://${BOT_TOKEN}@github.com/${{ github.repository }}.git" "HEAD:$(git rev-parse --abbrev-ref HEAD)"
