--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon srv/blackroad-api/server_full.js",
     "seed": "node scripts/seed_admin.js",
     "prepare": "husky",
-    "lint": "eslint srv/blackroad-api/server_full.js tests/api_health.test.js tests/git_api.test.js",
+    "lint": "eslint srv/blackroad-api/routes/git.js tests/api_health.test.js tests/git_api.test.js",
     "format": "prettier . --write",
     "format:check": "prettier package.json tests/api_health.test.js srv/lucidia-llm/test_app.py var/www/blackroad/.prettierrc.json .prettierrc.json RUNME.sh Makefile .github/workflows/ci.yml CLEANUP_PLAN.md CLEANUP_DECISIONS.md CLEANUP_RESULTS.md ROLLBACK.md CHANGELOG.md --check --ignore-unknown",
     "test": "jest tests/api_health.test.js tests/git_api.test.js",
@@ -27,35 +27,43 @@
     "node": ">=20"
   },
   "dependencies": {
+    "@eslint/js": "^9.35.0",
     "bcrypt": "^5.1.1",
+    "better-sqlite3": "^9.4.3",
+    "compression": "^1.8.1",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ethers": "^6.10.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "express-validator": "^7.2.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.5",
+    "stripe": "^12.18.0",
     "systeminformation": "^5.25.11",
     "uuid": "^9.0.1",
-    "better-sqlite3": "^9.4.3",
-    "stripe": "^12.18.0",
-    "ethers": "^6.10.0",
+    "winston": "^3.17.0",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.4",
     "cross-env": "^7.0.3",
-    "eslint": "^9.12.0",
-    "prettier": "^3.3.3",
+    "eslint": "^9.35.0",
     "husky": "^9.0.10",
-    "lint-staged": "^16.1.5"
+    "jest": "^29.7.0",
+    "lint-staged": "^16.1.5",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.3.3",
+    "supertest": "^6.3.4"
   },
-    "lint-staged": {
-    "*.{js,jsx,mjs,cjs,ts,tsx}": [
+  "lint-staged": {
+    "srv/blackroad-api/**/*.js": [
+      "eslint --fix",
+      "prettier -w"
+    ],
+    "tests/**/*.js": [
       "eslint --fix",
       "prettier -w"
     ],
