--- a/apps/prismweb/package.json
+++ b/apps/prismweb/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run --environment jsdom",
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
     "idb-keyval": "^6.2.1",
@@ -22,6 +24,9 @@
     "tailwindcss": "^3.4.9",
     "typescript": "^5.4.0",
     "vite": "^5.2.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vitest": "^1.4.0",
+    "jsdom": "^24.0.0",
+    "@testing-library/react": "^14.0.0"
   }
 }
