--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "supertest": "^6.3.4",
     "cross-env": "^7.0.3",
     "eslint": "^9.12.0",
+    "@eslint/js": "^9.12.0",
     "prettier": "^3.3.3",
     "husky": "^9.0.10",
     "lint-staged": "^16.1.5"
   },
-    "lint-staged": {
+  "lint-staged": {
     "*.{js,jsx,mjs,cjs,ts,tsx}": [
       "eslint --fix",
       "prettier -w"
