fix(workflows): allow semantic PR action to report status

--- a/.github/workflows/semantic-pr.yml
+++ b/.github/workflows/semantic-pr.yml
@@ -4,6 +4,7 @@ on:
     types: [opened, edited, synchronize]
 permissions:
   pull-requests: read
+  checks: write
 jobs:
   check:
     runs-on: ubuntu-latest
