style: refine health-sidecar comments

--- a/services/health-sidecar/.env.example
+++ b/services/health-sidecar/.env.example
@@ -1,7 +1,10 @@
 # sample environment variables for the health-sidecar service
-# port to serve the health endpoints
+
+# port for health endpoints
 PORT=8088
-# root directory where the primary API stores its health file
+
+# root directory for the primary api health file
 API_ROOT=/var/www/blackroad/api
-# commit SHA injected by the deploy workflow
+
+# commit sha injected by the deploy workflow
 COMMIT_SHA=
