chore(automation): restrict PR workflow tokens to read-only

--- a/.github/workflows/html-validate.yml
+++ b/.github/workflows/html-validate.yml
@@ -1,6 +1,8 @@
 name: HTML Validate
 on: { pull_request: {}, workflow_dispatch: {} }
-permissions: { contents: read }
+permissions:
+  contents: read
+  pull-requests: read
 jobs:
   validate:
     runs-on: ubuntu-latest
