--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,4 +32,4 @@ repos:
       - id: eslint
         args: ['--fix']
         files: "\\.(js|jsx|ts|tsx)$"
-        additional_dependencies: ['@eslint/js@^9.12.0']
+        additional_dependencies: ['@eslint/js@9.12.0']
