--- a/prism/server/package.json
+++ b/prism/server/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "fastify": "^4.28.0",
+    "shell-quote": "^1.8.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
+    "@types/shell-quote": "^1.7.5",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.0",
