--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,4 @@
-# Default reviewers for all files
-* @blackboxprogramming/core
+/infra/            @platform-team
+/flows/            @integration-team
+/monitors/         @sre-team
+/runbooks/         @platform-team
