--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,5 @@ extend-select = ["I"]
 [tool.pytest.ini_options]
 pythonpath = ["."]
 extend-select = ["I"]  # import sort
+testpaths = ["tests/core", "tests/fuzz"]
 
