--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,10 @@ profile = "black"
 line-length = 100
 extend-select = ["I"]
 
+[tool.mypy]
+python_version = "3.11"
+packages = ["orchestrator", "bots", "config", "cli", "tools"]
+
 [tool.pytest.ini_options]
 pythonpath = ["."]
 extend-select = ["I"]  # import sort
-
