--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,17 @@
+[build-system]
+requires = ["setuptools>=61", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "blackroad-prism-console"
+version = "0.1.0"
+description = "BlackRoad Prism console CLI"
+authors = [{ name = "BlackRoad" }]
+dependencies = ["typer>=0.9.0"]
+
+[tool.setuptools]
+packages = ["cli"]
+
 [tool.black]
 line-length = 100
 target-version = ["py311"]
