--- a/apps/portals/package.json
+++ b/apps/portals/package.json
@@ -22,7 +22,9 @@
     "@ai-sdk/openai-compatible": "latest",
     "@ai-sdk/react": "latest",
     "zod": "latest",
-    "ollama-ai-provider-v2": "latest"
+    "ollama-ai-provider-v2": "latest",
+    "gray-matter": "^4.0.3",
+    "marked": "^10.0.0"
   },
   "devDependencies": {
     "autoprefixer": "10.4.16",
